# excel-rag-example

./: README.md  mydatabase.db  pyproject.toml  rag.ipynb
files/: .~lock.sample1.xls#
