[project]
name = "excel-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "xlrd>=2.0.1",
]
